# bootcamp-proyecto-final

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  Makefile  README-Development.md  README.md  coverage.sh  dev-tools.sh  docker-compose.yml  docker-manage.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  run.py  setup-jenkins.sh  test.sh
app/: __init__.py  config.py  models.py  routes.py
docker/: Dockerfile.jenkins  Dockerfile.jenkins.alternative  Dockerfile.postgres  jenkins-setup.md  plugins.txt  plugins.txt.bak
docker/init-scripts/: 01-init.sh
tests/: conftest.py  test_integration.py  test_models.py  test_routes.py
